<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingBottom="30dp"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:elevation="10dp"
            app:cardCornerRadius="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white_one">

                <androidx.cardview.widget.CardView
                    android:id="@+id/login_iv_one"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    app:cardCornerRadius="20dp">

                    <ImageView
                        android:layout_width="250dp"
                        android:layout_height="250dp"
                        android:src="@drawable/login_page_image" />

                </androidx.cardview.widget.CardView>

                <EditText
                    android:id="@+id/et_user_name"
                    android:layout_width="350dp"
                    android:layout_height="50dp"
                    android:layout_below="@id/login_iv_one"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30dp"
                    android:drawableLeft="@drawable/ic_baseline_account_circle_24"
                    android:drawablePadding="10dp"
                    android:hint="@string/prompt_user_name"
                    android:inputType="text"
                    android:paddingLeft="20dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/text_color"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/et_phone_number"
                    android:layout_width="350dp"
                    android:layout_height="50dp"
                    android:layout_below="@id/et_user_name"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/baseline_local_phone_24"
                    android:drawablePadding="10dp"
                    android:hint="@string/prompt_phone_number"
                    android:inputType="number"
                    android:paddingLeft="20dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/text_color"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/et_user_age"
                    android:layout_width="350dp"
                    android:layout_height="50dp"
                    android:layout_below="@id/et_phone_number"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/baseline_date_range_24"
                    android:drawablePadding="10dp"
                    android:hint="@string/prompt_age"
                    android:inputType="number"
                    android:paddingLeft="20dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/text_color"
                    android:textSize="20sp" />


                <EditText
                    android:id="@+id/et_email_id"
                    android:layout_width="350dp"
                    android:layout_height="50dp"
                    android:layout_below="@id/et_user_age"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/ic_baseline_mail_outline_24"
                    android:drawablePadding="10dp"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="20dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/text_color"
                    android:textSize="20sp" />


                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="350dp"
                    android:layout_height="50dp"
                    android:layout_below="@id/et_email_id"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/baseline_lock_24"
                    android:drawablePadding="10dp"
                    android:hint="@string/prompt_password"
                    android:inputType="text"
                    android:paddingLeft="20dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/text_color"
                    android:textSize="20sp" />



                <!--                <View-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="2dp"-->
                <!--                    android:layout_below="@id/et_confirm_password"-->
                <!--                    android:layout_alignBaseline="@id/bt_register_button"-->
                <!--                    android:background="@color/black"-->
                <!--            />-->

                <TextView
                    android:id="@+id/bt_save_change_button"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:layout_below="@id/et_password"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="50dp"
                    android:background="@drawable/button_view_background"
                    android:elevation="10dp"
                    android:gravity="center"
                    android:text="Save Changes"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />


            </RelativeLayout>
        </androidx.cardview.widget.CardView>


    </RelativeLayout>

</ScrollView>