<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingBottom="30dp"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:elevation="10dp"
            app:cardCornerRadius="20dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white_one">

                <androidx.cardview.widget.CardView
                    android:id="@+id/login_iv_one"
                    android:layout_width="220dp"
                    android:layout_height="220dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    app:cardCornerRadius="20dp">

                    <ImageView
                        android:layout_width="220dp"
                        android:layout_height="220dp"
                        android:src="@drawable/login_page_image" />

                </androidx.cardview.widget.CardView>


                <EditText
                    android:id="@+id/et_company_name"
                    android:layout_width="350dp"
                    android:layout_height="50dp"
                    android:layout_below="@id/login_iv_one"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30dp"
                    android:drawableLeft="@drawable/ic_address"
                    android:drawablePadding="10dp"
                    android:hint="@string/prompt_company_name"
                    android:inputType="text"
                    android:paddingLeft="20dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/text_color"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/et_phone_number"
                    android:layout_width="350dp"
                    android:layout_height="50dp"
                    android:layout_below="@id/et_company_name"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/baseline_local_phone_24"
                    android:drawablePadding="10dp"
                    android:hint="@string/prompt_phone_number"
                    android:inputType="number"
                    android:paddingLeft="20dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/text_color"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/et_email_id"
                    android:layout_width="350dp"
                    android:layout_height="50dp"
                    android:layout_below="@id/et_phone_number"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/ic_baseline_mail_outline_24"
                    android:drawablePadding="10dp"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="20dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/text_color"
                    android:textSize="20sp" />


                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="350dp"
                    android:layout_height="50dp"
                    android:layout_below="@id/et_email_id"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/baseline_lock_24"
                    android:drawablePadding="10dp"
                    android:hint="@string/prompt_password"
                    android:inputType="text"
                    android:paddingLeft="20dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/text_color"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/et_address"
                    android:layout_width="350dp"
                    android:layout_height="50dp"
                    android:layout_below="@id/et_password"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/baseline_location_black"
                    android:drawablePadding="10dp"
                    android:hint="Enter company address"
                    android:inputType="text"
                    android:paddingLeft="20dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/text_color"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/et_license_number"
                    android:layout_width="350dp"
                    android:layout_height="50dp"
                    android:layout_below="@id/et_address"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/number"
                    android:drawablePadding="10dp"
                    android:hint="Enter license number"
                    android:inputType="text"
                    android:paddingLeft="25dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/text_color"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_user_kit"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:layout_below="@id/et_license_number"
                    android:layout_alignStart="@id/et_license_number"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/query_user_kit"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/sw_user_kit_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/et_license_number"
                    android:layout_alignTop="@id/tv_user_kit"
                    android:layout_alignBottom="@id/tv_user_kit"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@id/tv_user_kit" />

                <TextView
                    android:id="@+id/tv_user_kit_description"
                    android:layout_width="350dp"
                    android:layout_height="80dp"
                    android:layout_below="@id/tv_user_kit"
                    android:layout_alignStart="@id/tv_user_kit"
                    android:layout_alignEnd="@id/sw_user_kit_switch"
                    android:layout_marginStart="-2dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="2dp"
                    android:text="@string/description_user_kit"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="italic" />


                <!--                <View-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="2dp"-->
                <!--                    android:layout_below="@id/et_confirm_password"-->
                <!--                    android:layout_alignBaseline="@id/bt_save_button"-->
                <!--                    android:background="@color/heading_color" />-->

                <TextView
                    android:id="@+id/bt_save_button"
                    android:layout_width="180dp"
                    android:layout_height="50dp"
                    android:layout_below="@id/tv_user_kit_description"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/button_view_background"
                    android:elevation="10dp"
                    android:gravity="center"
                    android:text="Save Changes"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />


            </RelativeLayout>
        </androidx.cardview.widget.CardView>


    </RelativeLayout>
</ScrollView>