<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingBottom="30dp"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:elevation="10dp"
            app:cardCornerRadius="20dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white_one">

                <androidx.cardview.widget.CardView
                    android:id="@+id/login_iv_one"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_centerHorizontal="true"
                    app:cardCornerRadius="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp">

                    <ImageView
                        android:layout_width="250dp"
                        android:layout_height="250dp"
                        android:src="@drawable/login_page_image" />

                </androidx.cardview.widget.CardView>


                <EditText
                    android:id="@+id/et_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/login_iv_one"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="10dp"
                    android:drawableLeft="@drawable/baseline_local_phone_24"
                    android:drawablePadding="10dp"
                    tools:text="776655448"
                    android:hint="Phone Number"
                    android:textColorHint="#000"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/et_phone_number"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:drawableLeft="@drawable/baseline_lock_24"
                    android:drawablePadding="10dp"
                    tools:text="66eyy7"
                    android:layout_marginBottom="10dp"
                    android:hint="Password"
                    android:textColorHint="#000"
                    android:textSize="20sp" />


                <LinearLayout
                    android:id="@+id/ll_account_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/et_password"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_account_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/et_password"
                        android:text="@string/account_switch_query"
                        android:textColor="@color/text_color"
                        android:textSize="20sp" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/sw_account_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/et_password"
                        android:layout_alignTop="@id/tv_account_switch"
                        android:layout_alignBottom="@id/tv_account_switch"
                        android:layout_marginLeft="20dp"
                        android:layout_toRightOf="@id/tv_account_switch" />
                </LinearLayout>

                <TextView
                    android:id="@+id/bt_login_button"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_below="@id/ll_account_switch"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_view_background"
                    android:gravity="center"
                    android:text="@string/button_login"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:id="@+id/rl_section_break"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/bt_login_button"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="24dp">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@id/or_txt"
                        android:background="#000" />

                    <TextView
                        android:id="@+id/or_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:text="OR"
                        android:textSize="25sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@id/or_txt"
                        android:background="#000" />
                </RelativeLayout>
                        <RelativeLayout
                            android:id="@+id/rl_register_section"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/rl_section_break"
                            android:layout_centerHorizontal="true">

                            <TextView
                                android:id="@+id/tv_sign_in_query"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:text="@string/prompt_register"
                                android:textColor="@color/text_color"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/tv_register"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignTop="@+id/tv_sign_in_query"
                                android:layout_centerVertical="true"
                                android:layout_marginLeft="10dp"
                                android:layout_toRightOf="@+id/tv_sign_in_query"
                                android:text="@string/text_register"
                                android:textColor="@color/text_color"
                                android:textSize="20sp"
                                android:textStyle="bold" />
                        </RelativeLayout>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/rl_register_section"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="20dp"
                            android:orientation="horizontal"
                            android:layout_marginBottom="10dp">

                            <TextView
                                android:id="@+id/tv_seller_switch_button"
                                android:layout_width="100dp"
                                android:layout_height="50dp"
                                android:layout_marginRight="10dp"
                                android:background="@drawable/button_view_background"
                                android:text="@string/button_seller_reg_switch"
                                android:textColor="@color/white"
                                android:textSize="17sp"
                                android:textStyle="bold"
                                android:gravity="center"
                                android:layout_marginBottom="5dp" />

                            <TextView
                                android:id="@+id/tv_user_switch_button"
                                android:layout_width="100dp"
                                android:layout_height="50dp"
                                android:layout_marginLeft="10dp"
                                android:background="@drawable/button_view_background"
                                android:layout_marginBottom="5dp"
                                android:text="@string/button_user_reg_switch"
                                android:textColor="@color/white"
                                android:textSize="17sp"
                                android:textStyle="bold"
                                android:gravity="center" />
                        </LinearLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>


    </RelativeLayout>

</ScrollView>